[package]
name = "cloudflare-d1-try"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
crate-type = ["cdylib"]

[dependencies]
anyhow = "1.0.80"
async-trait = "0.1.77"
garde = { version = "0.18.0", features = ["derive"] }
serde = "1.0.197"
serde-wasm-bindgen = "0.6.5"
serde_json = "1.0.114"
worker = { version = "0.0.20", features = ["d1"] }

